<resources>
    <string name="app_name">Influencer AI</string>
    <string name="label_create_post_activity">Create post</string>
    <string name="label_post_detail_activity">Post detail</string>
    <string name="label_image_detail_activity">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_edit_post">Edit post</string>
    <string name="title_activity_following_posts">Following posts</string>
    <string name="text_take_photo">Take photo</string>
    <string name="text_pick_photo">Pick from Gallery</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="message_post_was_created">Post was created</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_load_image">Fail to load image</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post …</string>
    <string name="message_saving">Saving …</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_title">Title is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_post_title_length">Max length of the title should be less than 255 symbols</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>
    <string name="comment_text_hint">Enter your comment …</string>
    <string name="button_post_comment">Post comment</string>
    <string name="label_comments">Comments (%1$d):</string>
    <string name="create_post_menu_label">Post</string>
    <string name="create_post_full_menu_label">Create post</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>
    <string name="prompt_influencer">Influencer</string>
    <string name="prompt_marketer">Marketer</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_name">User name</string>
    <string name="prompt_male">Male</string>
    <string name="prompt_female">Female</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_dob">Date of birth</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_professional">Professions</string>
    <string name="prompt_profile_infor">Profile information</string>
    <string name="prompt_socical_infor">Social network</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="action_create_profile">Continue</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_confirm_password">Wrong password confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="text_login">Thank you for using our application! Please, sign in for continue your action.</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="error_google_play_services">Google Play Services error.</string>
    <string name="button_login_with_twitter">Login with Twitter</string>
    <string name="button_login_with_instagram">Login with Instagram</string>
    <string name="button_login_with_facebook">Login with Facebook</string>
    <string name="button_login_with_google">Login with Google</string>
    <string name="button_login_with_youtube">Login with Youtube</string>
    <string name="login_privacy"><u>Privacy</u></string>
    <string name="login_term_n_condition"><u>Term and Conditions</u></string>
    <string name="login_contact_us"><u>Contact us</u></string>
    <string name="dob_helper">YYYY-MM-DD</string>
    <string name="location_helper">Country, city</string>
    <string name="description_helper">Biology, website, personal</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="facebook_request_field">id,name,email,gender,birthday,picture,cover</string>
    <string name="user_type_invalid_message">Must be a Marketer or Influencer!</string>
    <string name="email_invalid_message">Email format is invalid!</string>
    <string name="user_length_invalid_message">Name length is invalid!</string>
    <string name="des_length_invalid_message">Description length is invalid!</string>
    <string name="dob_invalid_message">Date of birth is wrong format!</string>
    <string name="profession_invalid_message">Must be select at less %1$d professions!</string>
    <string name="loading">Loading …</string>
    <string name="removing">Removing …</string>
    <string name="error_general">Something went wrong.</string>
    <string name="error_general_post">Something went wrong with post, id: %1$s</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="profile_menu_item">Profile</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="add_complain">Complain</string>
    <string name="edit_post_menu">Edit post</string>
    <string name="delete_post_menu">Delete post</string>
    <string name="complain_text">You can complain to this post if it contains violence,
        bullying and threats, hate speech, tragic events and sexually explicit contents.
        Nobody will see the post if you complain to it. You can\'t delete your complain.</string>
    <string name="send_comment_button_label">Send</string>
    <string name="posted_by_label">Posted by:</string>
    <plurals name="posts_counter_format">
        <item quantity="one">post</item>
        <item quantity="other">posts</item>
    </plurals>
    <plurals name="likes_counter_format">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>
    <plurals name="followers_counter_format">
        <item quantity="one">follower</item>
        <item quantity="other">followers</item>
    </plurals>
    <plurals name="followings_counter_format">
        <item quantity="one">following</item>
        <item quantity="other">followings</item>
    </plurals>
    <string name="posts_label">Posts:</string>
    <string name="complain_sent">Complain was sent successfully</string>
    <string name="now_time_range">now</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="post_logo_image_transition_name" translatable="false">post_logo_image_transition_name</string>
    <string name="message_new_post_was_created">New post was created</string>
    <plurals name="new_posts_counter_format">
        <item quantity="one">%1$d new post</item>
        <item quantity="other">%1$d new posts</item>
    </plurals>
    <string name="edit_comment_menu_item">Edit</string>
    <string name="delete_comment_menu_item">Delete</string>
    <string name="message_comment_was_removed">Comment was removed</string>
    <string name="message_comment_was_edited">Comment was edited</string>
    <string name="title_edit_comment">Edit comment</string>
    <string name="button_follow_title">Follow</string>
    <string name="button_follow_back_title">Follow back</string>
    <string name="button_following">Following</string>
    <string name="unfollow_user_message">Unfollow %1$s?</string>
    <string name="button_title_unfollow">Unfollow</string>
    <string name="message_following_posts_empty">Follow somebody to see his new posts</string>
    <string name="following_post_menu_item">Following Posts</string>
    <string name="title_followers">Followers</string>
    <string name="title_followings">Followings</string>
    <string name="message_empty_list">You don\'t have any %1$s yet</string>
    <string name="search_menu_item">Search</string>
    <string name="search_hint">Search …</string>
    <string name="posts_tab_title">Posts</string>
    <string name="users_tab_title">Users</string>
    <string name="empty_posts_search_message">No posts found</string>
    <string name="empty_user_search_message">No users found</string>
    <string name="permission_denied_error">Please check your rules to access the Firebase Realtime Database</string>
    <string name="new_like_channel_name">New Like</string>
    <string name="new_comment_channel_name">New Comment</string>
    <string name="chat_menu_item">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
</resources>