<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hally.influencerai.main.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg_gradient"
        android:transitionName="@string/post_image_transition_name" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_screen_content_offset_center_top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:transitionName="@string/post_logo_image_transition_name" />

        <TextView
            style="@style/TextAppearance.MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_screen_title_margin"
            android:text="@string/app_name" />


        <com.hally.influencerai.views.ButtonSocial
            android:id="@+id/facebookSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_login_with_facebook"
            app:social="facebook" />

        <com.hally.influencerai.views.ButtonSocial
            android:id="@+id/youtubeSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intrinsic_padding"
            android:text="@string/button_login_with_youtube"
            app:social="youtube" />

        <com.hally.influencerai.views.ButtonSocial
            android:id="@+id/twitterSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intrinsic_padding"
            android:text="@string/button_login_with_twitter"
            app:social="twitter" />

        <com.hally.influencerai.views.ButtonSocial
            android:id="@+id/instagramSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intrinsic_padding"
            android:text="@string/button_login_with_instagram"
            app:social="instagram" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bottomPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/login_privacy"
            android:textColor="@drawable/login_button_text_selector" />

        <TextView
            android:id="@+id/bottomTermNCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/login_term_n_condition"
            android:textColor="@drawable/login_button_text_selector" />

        <TextView
            android:id="@+id/bottomContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_contact_us"
            android:textColor="@drawable/login_button_text_selector" />
    </LinearLayout>
</FrameLayout>

