<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/image_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg_gradient"
        android:transitionName="@string/post_image_transition_name" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:transitionName="@string/post_logo_image_transition_name" />

    <TextView
        style="@style/TextAppearance.MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/app_name" />
</FrameLayout>
